@@ -3,7 +3,8 @@
 |               PENDING - WORK IN PROGRESS                  |
 |                                                           |
  ===========================================================
-
+Voir mémorisation des login/pwd sous FICS
+Intégrer patch Michel (book tuning) : BUG ajout de coup à la fin de ligne
  ===========================================================
 |                                                           |
 |                          BUGS                             |
