@@ -9727,14 +9727,14 @@ sc_pos (ClientData cd, Tcl_Interp * ti, int argc, const char ** argv)
         "fen", "getComment", "getNags", "hash", "html",
         "isAt", "isLegal", "isPromotion",
         "matchMoves", "moveNumber", "pgnBoard", "pgnOffset",
-        "probe", "setComment", "side", "tex", NULL
+        "probe", "setComment", "side", "tex", "moves", NULL
     };
     enum {
         POS_ADDNAG, POS_ANALYZE, POS_BESTSQ, POS_BOARD, POS_CLEARNAGS,
         POS_FEN, POS_GETCOMMENT, POS_GETNAGS, POS_HASH, POS_HTML,
         POS_ISAT, POS_ISLEGAL, POS_ISPROMO,
         POS_MATCHMOVES, POS_MOVENUM, POS_PGNBOARD, POS_PGNOFFSET,
-        POS_PROBE, POS_SETCOMMENT, POS_SIDE, POS_TEX
+        POS_PROBE, POS_SETCOMMENT, POS_SIDE, POS_TEX, POS_MOVES
     };
 
     char boardStr[200];
@@ -9795,6 +9795,9 @@ sc_pos (ClientData cd, Tcl_Interp * ti, int argc, const char ** argv)
 
     case POS_MATCHMOVES:
         return sc_pos_matchMoves (cd, ti, argc, argv);
+
+    case POS_MOVES:
+        return sc_pos_moves (cd, ti, argc, argv);
 
     case POS_MOVENUM:
         // This used to return:
@@ -10275,6 +10278,28 @@ sc_pos_matchMoves (ClientData cd, Tcl_Interp * ti, int argc, const char ** argv)
 
     return TCL_OK;
 }
+
+//~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// sc_pos_moves: Return the list of legal moves in SAN notation
+//
+int
+sc_pos_moves (ClientData cd, Tcl_Interp * ti, int argc, const char ** argv)
+{
+    if (argc != 2) {
+        return errorResult (ti, "Usage: sc_pos moves");
+    }
+    Position * p = db->game->GetCurrentPos();
+    p->ClearSANStrings();
+    p->CalcSANStrings (SAN_NO_CHECKTEST);
+    sanListT * sanList = p->GetSANStrings();
+
+    for (uint i=0; i < sanList->num; i++) {
+            Tcl_AppendElement (ti, sanList->list[i]);
+    }
+    return TCL_OK;
+}
+
+
 
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // sc_pos_pgnBoard:
@@ -15832,10 +15857,10 @@ int
 sc_book (ClientData cd, Tcl_Interp * ti, int argc, const char ** argv)
 {
     static const char * options [] = {
-        "load", "close", "moves", "update", NULL
+        "load", "close", "moves", "movesupdate", "update", NULL
     };
     enum {
-        BOOK_LOAD,    BOOK_CLOSE, BOOK_MOVE, BOOK_UPDATE,
+        BOOK_LOAD,    BOOK_CLOSE, BOOK_MOVE, BOOK_MOVES_UPDATE, BOOK_UPDATE,
     };
     int index = -1;
 
@@ -15853,6 +15878,9 @@ sc_book (ClientData cd, Tcl_Interp * ti, int argc, const char ** argv)
 
     case BOOK_UPDATE:  
         return sc_book_update (cd, ti, argc, argv);
+
+    case BOOK_MOVES_UPDATE:  
+        return sc_book_movesupdate (cd, ti, argc, argv);
         
     default:
         return InvalidCommand (ti, "sc_book", options);
@@ -15921,6 +15949,19 @@ sc_book_update (ClientData cd, Tcl_Interp * ti, int argc, const char ** argv)
     }
     uint slot = strGetUnsigned (argv[3]);
 		scid_book_update( (char*) argv[2], slot );
+    return TCL_OK;
+}
+//~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// sc_book_movesupdate:
+//    updates the opened book with moves and probability values
+int
+sc_book_movesupdate (ClientData cd, Tcl_Interp * ti, int argc, const char ** argv)
+{
+    if (argc != 6) {
+        return errorResult (ti, "Usage: sc_book update <moves> <probs> slot tempfile");
+    }
+    uint slot = strGetUnsigned (argv[4]);
+    scid_book_movesupdate( (char*) argv[2], (char*) argv[3], slot, (char*) argv[5] );
     return TCL_OK;
 }
 //////////////////////////////////////////////////////////////////////
